# python-volur-sdk

./: .editorconfig  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  Earthfile  LICENSE  README.md  client_SDK_reference_guide.ipynb  justfile  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  pr.yaml
docs/: authentication.md  data-model.md  deploying.md  getting-started.md  index.md  installation.md  map_data_to_volur_data_model.md
docs/examples/: index.md  upload-data-from-a-csv-without-header.md  upload-materials-data-from-a-csv-with-header.md  upload-product-data-from-a-csv-with-header.md
docs/reference/: SUMMARY.md
docs/reference/sdk/: client.md  index.md
docs/reference/sdk/sources/: csv.md  index.md
docs/reference/volur/api/: client.md  index.md  settings.md
docs/reference/volur/sdk/: client.md  index.md
docs/reference/volur/sdk/sources/: index.md
docs/reference/volur/sdk/sources/csv/: asynchronous.md  base.md  index.md  shared.md  synchronous.md
examples/: README.md  generate-fake-data.py  main.py
examples/azure-function/: Dockerfile  README.md  function_app.py  justfile  pyproject.toml
examples/azure-function/poetry/: requirements.in  requirements.txt
examples/product_example/: main.py  product_data.csv
poetry/: requirements.in  requirements.txt
scripts/: gen_pages.py
src/volur/api/: __init__.py  client.py  settings.py
src/volur/api/v1alpha1/: __init__.py  client.py
src/volur/sdk/: __init__.py  client.py
src/volur/sdk/sources/: __init__.py
src/volur/sdk/sources/csv/: __init__.py  asynchronous.py  base.py  shared.py  source.py  synchronous.py
src/volur/sdk/v1alpha1/: __init__.py  client.py
src/volur/sdk/v1alpha1/sources/: __init__.py
src/volur/sdk/v1alpha1/sources/csv/: __init__.py  base.py  shared.py  source.py
src/volur/sdk/v1alpha2/: __init__.py  client.py
src/volur/sdk/v1alpha2/sources/: __init__.py
src/volur/sdk/v1alpha2/sources/csv/: __init__.py  base.py  shared.py  source.py
tests/: test_upload_materials.py
tests/test_api/: test_settings.py
tests/test_sources/csv/: test_asynchronous.py  test_product_source.py  test_shared.py  test_source.py  test_synchronous.py
tests/test_sources/csv/v1alpha2/: test_characteristic_column_bool.py  test_characteristic_column_date.py  test_characteristic_column_float.py  test_characteristic_column_integer.py  test_characteristic_column_string.py  test_characteristic_column_timestamp.py  test_column.py  test_demand_source.py  test_materials_source.py  test_products_source.py  test_quantity_column.py
